--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Pet Clinic Index</title>
+    <title>Vets Index</title>
 </head>
 <body>
-    <h1 th:text="'Index Page'">Index Page</h1>
+    <h1 th:text="'List of Vets'">List Of Vets...</h1>
 </body>
 </html>
