--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"  th:replace="~{fragments/layout :: layout (~{::body},'home')}">
 <head>
     <meta charset="UTF-8">
     <title>Vets Index</title>
 </head>
 <body>
 <!--/*@thymesVar id="owner" type="com.project.newpetclinic.model.Vet"*/-->
-<h1 th:text="'List of Owners'">Owners List</h1>
+<h2 th:text="'List of Vets'">Vets List</h2>
 
-<table>
+<table class="table table-striped">
     <thead>
     <tr>
-        <th>Id</th>
-        <th>First Name</th>
-        <th>Last Name</th>
+        <th style="width: 150px">Id</th>
+        <th style="width: 200px">First Name</th>
+        <th style="width: 200px;">Last Name</th>
     </tr>
     </thead>
     <tbody>
     <tr th:each="vet : ${vets}">
         <td th:text="${vet.id}">1</td>
-        <td th:text="${vet.firstName}">Joe</td>
-        <td th:text="${vet.lastName}">Buck</td>
+        <td th:text="${vet.firstName}"></td>
+        <td th:text="${vet.lastName}"></td>
     </tr>
     </tbody>
 </table>
